fix gap

--- a/styles/style.css
+++ b/styles/style.css
@@ -277,21 +277,27 @@
 .filter-grayscale img {
 	filter: grayscale(80%);
 }
+
 .filter-saturate img {
 	filter: saturate(300%);
 }
+
 .filter-hue-rotate img {
 	filter: hue-rotate(30deg);
 }
+
 .filter-invert img {
 	filter: invert(100%) brightness(70%);
 }
+
 .filter-sepia img {
 	filter: sepia(1);
 }
+
 .filter-blur img {
 	filter: blur(20px);
 }
+
 .filter-contrast img {
 	filter: hue-rotate(0.3turn) contrast(60%);
 }
@@ -368,6 +374,7 @@
 .card__container-buttons {
 	display: flex;
 	justify-self: end;
+	gap: 4px;
 }
 
 .card__icon-button {
